# CodemagicMcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish-pypi.yml
codemagic_mcp/: __main__.py  client.py  config.py  server.py
codemagic_mcp/tools/: __init__.py  apps.py  artifacts.py  builds.py  caches.py  variables.py  webhooks.py
