[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CodemagicMcp"
version = "0.6.0"
description = "Codemagic CI/CD MCP Server — manage builds, apps, artifacts, and caches from your AI"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
codemagic-mcp = "codemagic_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["codemagic_mcp"]
